--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-# Packages 
+# Packages - install in your own environment
 mysql-connector-python
 pandas
 numpy
+dotenv
+os
+
+# Additional files 
+.env
